<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_marginTop="-20dp">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#2EB6AA"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fanhui"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:text="BMI计算"
            android:layout_gravity="center"/>

    </FrameLayout>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/top_all_height"
        android:background="@drawable/shape_corner"
        android:id="@+id/relativeLayout2"
        android:layout_marginTop="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_tv_text1"
            style="@style/tv_top_style"/>

        <EditText
            android:id="@+id/et1"
            android:layout_width="@dimen/top_et_width"
            android:layout_height="wrap_content"
            android:maxLength="3"
            style="@style/et_top_style1"/>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_tv_text2"
            style="@style/et_top_style2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv1"
            android:text="@string/top_tv_text3"
            style="@style/tv_top_style"/>

        <EditText
            android:id="@+id/et2"
            android:layout_below="@id/et1"
            android:layout_marginTop="@dimen/top_mg_top"
            android:layout_width="@dimen/top_et_width"
            android:layout_height="wrap_content"
            android:maxLength="5"
            style="@style/et_top_style1"/>

        <TextView
            android:layout_below="@id/tv2"
            android:layout_marginTop="@dimen/top_mg_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_tv_text4"
            style="@style/et_top_style2"/>

        <ImageButton
            android:id="@+id/imgbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search2"
            style="@style/imageButton"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_all_height"
        android:background="@drawable/shape_corner"
        style="@style/tv_middle_style"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout">

        <TextView
            android:id="@+id/tv_bmi"
            android:layout_width="match_parent"
            android:layout_height="@dimen/middle_tv_height"
            android:text="@string/middle_tv_text1"
            style="@style/tv_middle_style2"/>

        <TextView
            android:id="@+id/tv_IdealWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/middle_tv_text2"
            style="@style/tv_middle_style3"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner"
        style="@style/bottom_style"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv01a"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_01a"
                style="@style/bottom_text_style"
                android:clickable="true"/>

            <TextView
                android:id="@+id/tv01b"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_01b"
                style="@style/bottom_text_style"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tv02a"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_02a"
                style="@style/bottom_text_style"/>

            <TextView
                android:id="@+id/tv02b"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_02b"
                style="@style/bottom_text_style"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/tv03a"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_03a"
                style="@style/bottom_text_style"/>

            <TextView
                android:id="@+id/tv03b"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_03b"
                style="@style/bottom_text_style"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="90dp">

            <TextView
                android:id="@+id/tv04a"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_04a"
                style="@style/bottom_text_style"/>

            <TextView
                android:id="@+id/tv04b"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_04b"
                style="@style/bottom_text_style"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="120dp">

            <TextView
                android:id="@+id/tv05a"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_05a"
                style="@style/bottom_text_style"/>

            <TextView
                android:id="@+id/tv05b"
                android:layout_width="@dimen/buttom_wg"
                android:layout_height="wrap_content"
                android:text="@string/bottom_05b"
                style="@style/bottom_text_style"/>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>