<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="欢迎你，刘洋洋"
        android:gravity="center_horizontal"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/marginSize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:text="@string/tv_me_food"
        android:layout_marginTop="@dimen/marginSize"
        android:textSize="@dimen/titleSize"
        android:gravity="center"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/bmi_calculate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:layout_marginTop="@dimen/marginSize"
        android:text="@string/tv_me_BMI"
        android:textSize="@dimen/titleSize"
        android:paddingLeft="@dimen/marginSize"
        android:gravity="center"
        android:background="@android:color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:layout_marginTop="@dimen/marginSize"
        android:text="@string/tv_me_password"
        android:textSize="@dimen/titleSize"
        android:paddingLeft="@dimen/marginSize"
        android:gravity="center"
        android:background="@android:color/white"/>
    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/marginSize"
        android:textColor="@android:color/white"
        android:background="@color/mainColor"
        android:text="@string/btn_me_exit"
        android:gravity="center"/>
</LinearLayout>
